tests/__snapshots__/api-expect-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect<string>().type.toBeString();
> 4 | expect.fail<string>().type.toBeString();
    | ^
  5 | 
  6 | expect.fail<never>().type.toBeString();
  7 | 

      at ./__typetests__/expect-fail.tst.ts:4:1

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  13 |   test("is string?", () => {
  14 |     expect<string>().type.toBeString();
> 15 |     expect.fail<string>().type.toBeString();
     |     ^
  16 | 
  17 |     expect.fail<never>().type.toBeVoid();
  18 |   });

       at ./__typetests__/expect-fail.tst.ts:15:5

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  21 | test("is number?", () => {
  22 |   expect<number>().type.toBeNumber();
> 23 |   expect.fail<number>().type.toBeNumber();
     |   ^
  24 | 
  25 |   expect.fail<never>().type.toBeVoid();
  26 | });

       at ./__typetests__/expect-fail.tst.ts:23:3

